# p3_msr

./: README.md
data/: controllers.txt  gazebo.txt  move_group.txt
my_rosbag/: metadata.yaml  my_rosbag_0.mcap
rover_ws/: frames_2025-05-17_01.22.55.gv
rover_ws/install/: local_setup.sh  setup.sh
rover_ws/install/msr_robot/share/msr_robot/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
rover_ws/install/msr_robot/share/msr_robot/cmake/: msr_robotConfig-version.cmake  msr_robotConfig.cmake
rover_ws/install/msr_robot/share/msr_robot/config/: rover_bridge.yaml  rover_controllers.yaml
rover_ws/install/msr_robot/share/msr_robot/environment/: ament_prefix_path.dsv  path.dsv
rover_ws/install/msr_robot/share/msr_robot/launch/: robot_controllers.launch.py  robot_gazebo.launch.py  robot_state_publisher.launch.py
rover_ws/install/msr_robot/share/msr_robot/robots/: rover.urdf.xacro
rover_ws/install/msr_robot/share/msr_robot/urdf/: ros2_control.urdf.xacro
rover_ws/install/rover_moveit_config/share/rover_moveit_config/: .setup_assistant  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
rover_ws/install/rover_moveit_config/share/rover_moveit_config/cmake/: rover_moveit_configConfig-version.cmake  rover_moveit_configConfig.cmake
rover_ws/install/rover_moveit_config/share/rover_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  (+5 more)
rover_ws/install/urjc_excavation_world/share/urjc_excavation_world/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
rover_ws/log/: latest_build
rover_ws/src/msr_robot/: CMakeLists.txt  package.xml
rover_ws/src/msr_robot/config/: rover_bridge.yaml  rover_controllers.yaml
rover_ws/src/msr_robot/launch/: robot_controllers.launch.py  robot_gazebo.launch.py  robot_state_publisher.launch.py
rover_ws/src/msr_robot/meshes/dae/: Cube.dae  Cylinder.031.dae  Cylinder.035.dae  Torus.001.dae  Torus.002.dae  Torus.003.dae  Torus.004.dae  Torus.005.dae  Torus.dae
rover_ws/src/msr_robot/robots/: rover.urdf.xacro
rover_ws/src/msr_robot/urdf/: ros2_control.urdf.xacro
rover_ws/src/msr_robot/urdf/arm/: gripper.urdf.xacro  scara.urdf.xacro
rover_ws/src/msr_robot/urdf/base/: rover_base.urdf.xacro
rover_ws/src/msr_robot/urdf/sensors/: camera.urdf.xacro  imu_sensor.urdf.xacro
rover_ws/src/msr_robot/urdf/wheels/: rover_wheel.urdf.xacro
rover_ws/src/rover_moveit_config/: .setup_assistant  package.xml
rover_ws/src/rover_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ros2_controllers.yaml  rover.ros2_control.xacro  rover.srdf  rover.urdf.xacro
(+56 files in other folders)
